[tool.poetry]
name = "computervision-final"
version = "0.1.0"
description = ""
authors = ["tida <tdamuda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.9"
opencv-contrib-python = "^4.5.2"
numpy = "^1.21.0"
matplotlib = "^3.4.2"
Pillow = "^8.3.1"
tqdm = "^4.61.2"

[tool.poetry.dev-dependencies]
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
